Fix heading alignment and add underline to email row

--- a/assets/scss/organisms/text/_table.scss
+++ b/assets/scss/organisms/text/_table.scss
@@ -26,6 +26,10 @@
             @include breakpoint(medium down) {
                 height: auto;
             }
+
+            .link-item {
+                padding-bottom: 12px;
+            }
         }
     }
 }
